--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ futures = "0.3"
 axum = { version = "0.8", features = ["macros"] }
 tokio-util = { version = "0.7", features = ["io", "codec"]}
 rand = { version = "0.9" }
+clap = { version = "4.4", features = ["derive"] }
 
 [[bin]]
 name = "main-server"
