--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ axum = { version = "0.8", features = ["macros"] }
 tokio-util = { version = "0.7", features = ["io", "codec"]}
 rand = { version = "0.9" }
 clap = { version = "4.4", features = ["derive"] }
+reqwest = { version = "0.12", features = ["json"] }
 
 [[bin]]
 name = "main-server"
